[package]
name = "local_credentials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.10"
tracing = "0.1"
tokio = { version = "1", features = ["fs"], optional = true }

[features]
async = ["tokio"]